fixed footer spacing

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 #content-wrap {
-    padding-bottom: 2.5rem;    /* Footer height */
+    padding-bottom: 100px;    /* Footer height */
 }
 
 footer {
